--- a/index.html
+++ b/index.html
@@ -120,12 +120,18 @@
 			<div class="flex-container options">
 				<div class="flex-group debug">
 					<label for="mtusize">MTU：</label>
-					<input type="number" id="mtusize" value="200" min="0" max="255">
+					<input type="number" id="mtusize" value="20" min="0" max="255">
 					<label for="interleavedcount">确认间隔：</label>
-					<input type="number" id="interleavedcount" value="80" min="0" max="500">
+					<input type="number" id="interleavedcount" value="50" min="0" max="500">
 				</div>
 			</div>
-			<div class="status-bar"><b>状态：</b><span id="status"></span></div>
+			<div class="status-bar">
+				<div class="progress-container">
+					<div class="progress-bar" id="progress1"></div>
+					<div class="progress-text" id="progressText">0%</div>
+				</div>
+				<b>状态：</b><span id="status"></span>
+			</div>
 			<div class="flex-container">
 				<div class="flex-group">
 					<button id="clearcanvasbutton" type="button" class="secondary" onclick="clearCanvas()">清除画布</button>
